--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
   <h1>{{ title }} is working!</h1>
 
   {% for obj in object_list %}
-
-  {{ obj.title }}</br>
+  
+  <a href="{% url "posts:detail" id=obj.id %}">{{ obj.title }}</a><br>
   {{ obj.content }}</br>
   {{ obj.timestamp }}</br>
   {{ obj.updated }}</br>
