--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -1,20 +1,20 @@
-<html>
-<head>
-</head>
-
-<body>
-  <h1>{{ instance.title }}</h1>
+{% extends "base.html" %}
 
 
-  {{ instance.title }}</br>
-  {{ instance.content }}</br>
-  {{ instance.timestamp }}</br>
-  {{ instance.updated }}</br>
-  {{ instance.id }}</br>
-  <br>
+{% block head_title %}
+{{ instance.title }} | {{ block.super }}
+{% endblock head_title %}
 
 
 
-</body>
+{% block content %}
+<h1>{{ title }}</h1>
 
-</html>
+
+{{ instance.title }}<br/>
+{{ instance.content }}<br/>
+{{ instance.timestamp }}<br/>
+{{ instance.updated }}<br/>
+{{ instance.id }}<br/>
+
+{% endblock content %}
